force-app/main/default/objects/Funding_Allocation__c/Funding_Allocation__c.object-meta.xml
<CustomObject>
    <label>Funding Allocation</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Funding Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>