force-app/main/default/objects/Funding_Allocation__c/fields/Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan__c</fullName>
    <label>Care Plan</label>
    <referenceTo>Care_Plan__c</referenceTo>
    <relationshipLabel>Funding Allocations</relationshipLabel>
    <relationshipName>Funding_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>