force-app/main/default/objects/Funding_Allocation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Support</fullName>
            </value>
            <value>
                <fullName>Respite</fullName>
            </value>
            <value>
                <fullName>Travel/Mileage</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>